--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,8 @@
-.customClassFromFile {
-  color: blue;
+// Pages
+@import './index';
+
+html, body {
+  height: 100%;
+  width: 100%;
+  font-family: 'Montserrat', 'Helvetica' !important;
 }
