--- a/styles/index.scss
+++ b/styles/index.scss
@@ -20,9 +20,10 @@
 
 .hero-section{
   h2 {
-    color: white;
+    color: #0000008a;
     font-weight: bold;
-    margin-bottom: 60px;
+    margin-bottom: -60px;
+    font-size: 3rem;
   }
 
   perspective: 1000px;
@@ -50,15 +51,15 @@
 }
 
 .hero-welcome-text > h1 {
-  color: white;
-  text-transform: uppercase;
+  color: purple;
   font-size: 27px;
   margin-top: 80px;
+  
 }
 
 .hero-welcome-bio {
   margin-top: 20px;
-  color: white;
+  color: #39dc83;
 
   .fa-stack {
     font-size: 28px;
@@ -113,6 +114,6 @@
 }
 
 .shadow-custom {
-  border: 4px dashed #8ee62a;
+  border: 4px dashed rgb(25, 102, 246);
   box-shadow: -17px 13px 41px rgba(13,78,158,0.3);
 }
