--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,14 @@
 // Pages
 @import './index';
 
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/fonts/Montserrat-Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
+}
+
+
 html, body {
   height: 100%;
   width: 100%;
