improevd navbar and used reactstrap

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,3 +14,9 @@ html, body {
   width: 100%;
   font-family: 'Montserrat', 'Helvetica' !important;
 }
+.self-typed {
+  font-size: 35px;
+  color: black;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
