--- a/styles/main.scss
+++ b/styles/main.scss
@@ -35,4 +35,11 @@ html, body {
 }
 .clickable {
   cursor: pointer;
+  color: black;
+  font-weight: bold;
+  letter-spacing: 0.8px;
+  font-size: 18px;
+}
+.clickable:hover, .clickable:focus {
+  color: yellow;
 }
