--- a/styles/header.scss
+++ b/styles/header.scss
@@ -5,14 +5,14 @@
 
   .port-navbar {
     &-brand {
-      color: white;
       font-size: 24px;
       text-transform: uppercase;
       letter-spacing: 1px;
       font-weight: bold;
-      text-decoration: none;
-      border-right: 4px solid black;
-      border-top: 4px solid black;
+      background: -webkit-linear-gradient(rgb(245, 243, 243), rgb(3, 1, 1));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+
     }
 
     &-item {
@@ -21,18 +21,18 @@
     }
 
     &-link {
-      color: rgb(69, 69, 204);
+      color: black;
       font-weight: bold;
       letter-spacing: 0.8px;
       font-size: 18px;
       text-transform: uppercase;
 
       &.active {
-      color: yellow;
+      color: rgb(22, 7, 107);
       }
 
       &:hover, &:focus {
-        color: yellow;
+        color: rgb(65, 32, 209);
       }
     }
   }
