--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,6 @@
 // Index -----------
 .cover {
-  background-image: linear-gradient(45deg,#00ef00 0%,#096fb9 100%);
+  background-image: url('homepage.jpg');
   overflow: hidden;
   position: relative;
 }
@@ -20,10 +20,10 @@
 
 .hero-section{
   h2 {
-    color: #0000008a;
+    color:#36454f;
     font-weight: bold;
-    margin-bottom: -60px;
-    font-size: 3rem;
+    margin-bottom: -15px;
+    font-size: 2.5rem;
   }
 
   perspective: 1000px;
@@ -51,9 +51,9 @@
 }
 
 .hero-welcome-text > h1 {
-  color: purple;
-  font-size: 27px;
-  margin-top: 80px;
+  color:black;
+  font-size: 50px;
+  margin-top: 55px;
   
 }
 
@@ -87,7 +87,7 @@
   }
 
   .hero-welcome-text > h1 {
-    margin-top: 0px;
+    margin-top:55px;
   }
 }
 
@@ -102,18 +102,16 @@
   height: 100%;
   position: absolute;
   top: 0;
-  box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
-  border: 2px solid #aae53b;
+  box-shadow: -17px 13px 41px rgba(41, 43, 46, 0.6);
 
   .shadow-inner {
     width: 100%;
     height: 100%;
-    box-shadow: -19px 19px 19px greenyellow;
+    box-shadow:inset 1px 1px 20px 20px #673AB7;
   }
 
 }
 
 .shadow-custom {
-  border: 4px dashed rgb(25, 102, 246);
-  box-shadow: -17px 13px 41px rgba(13,78,158,0.3);
+  box-shadow:inset 1px 1px 20px 20px #673AB7;
 }
