--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,7 +24,9 @@ html, body {
 }
 .self-typed {
   font-size: 35px;
-  color: black;
+  background: -webkit-linear-gradient(rgb(149, 238, 7), rgb(245, 7, 7));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-weight: bold;
   letter-spacing: 2px;
 }
