--- a/styles/project.scss
+++ b/styles/project.scss
@@ -3,11 +3,11 @@
   padding: 150px 0 0;
 
   .project-card {
-    background-image: linear-gradient(45deg, #73cf48 0%, #8f94fb 100%);
-    border: none;
-    color: black;
+    background-color: #180e27;
+    background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 10h10v10H0V10zM10 0h10v10H10V0z' fill='%237036cc' fill-opacity='0.41' fill-rule='evenodd'/%3E%3C/svg%3E");
     transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1) 0s;
     margin-bottom: 30px;
+    color:whitesmoke;
 
     &:hover {
       cursor: pointer;
