--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,7 +24,7 @@ html, body {
 }
 .self-typed {
   font-size: 35px;
-  background: -webkit-linear-gradient(rgb(149, 238, 7), rgb(245, 7, 7));
+  background: -webkit-linear-gradient(rgb(221, 226, 214), rgb(233, 176, 176));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: bold;
@@ -40,7 +40,7 @@ html, body {
 }
 .clickable {
   cursor: pointer;
-  color: black;
+  color: whitesmoke;
   font-weight: bold;
   letter-spacing: 0.8px;
   font-size: 18px;
