--- a/styles/index.scss
+++ b/styles/index.scss
@@ -20,14 +20,14 @@
 
 .hero-section{
   h2 {
-    color:#36454f;
+    color:#2a292a;
     font-weight: bold;
     margin-bottom: -15px;
     font-size: 2.5rem;
   }
 
   perspective: 1000px;
-  color: white;
+  color: rgb(34, 30, 245);
   width: 400px;
   position: relative;
 
@@ -50,11 +50,14 @@
   max-width: 100%;
 }
 
-.hero-welcome-text > h1 {
-  color:black;
+.hero-welcome-text {
+  h1,h2{
+  background: -webkit-linear-gradient(rgb(245, 243, 243), rgb(159, 167, 117));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
   font-size: 50px;
   margin-top: 55px;
-  
+  }
 }
 
 .hero-welcome-bio {
@@ -107,11 +110,11 @@
   .shadow-inner {
     width: 100%;
     height: 100%;
-    box-shadow:inset 1px 1px 20px 20px #673AB7;
+    box-shadow:inset 1px 1px 20px 20px #7a4ec7
   }
 
 }
 
 .shadow-custom {
-  box-shadow:inset 1px 1px 20px 20px #673AB7;
+  box-shadow:inset 1px 1px 20px 20px #7a4ec7
 }
