--- a/styles/index.scss
+++ b/styles/index.scss
@@ -109,6 +109,7 @@
 
   .shadow-inner {
     width: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 100%;
     box-shadow:inset 1px 1px 20px 20px #7a4ec7
   }
